.provarCaches/00D6C0000000xA6UAI/objects/SSign__SSignSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SSign__Allow_Zero_Click_Signatures__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this checkbox will allow the &quot;Zero Click&quot; signing process to be used when creating S-Sign Requests. Using this feature without consulting the S-Docs support team is not recommended.</description>
        <inlineHelpText>Checking this checkbox will allow the &quot;Zero Click&quot; signing process to be used when creating S-Sign Requests. Using this feature without consulting the S-Docs support team is not recommended.</inlineHelpText>
        <label>Allow Zero Click Signatures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Custom_Logo_URL__c</fullName>
        <label>Custom Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Disable_Text_To_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Text To Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Do_Not_Link_SSEnvelope_To_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Link SSEnvelope To Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Dont_Insert_Audit_Doc_CDL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t Insert Audit Doc CDL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Enable_Insert_Contact_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Insert Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Make_Envelope_Documents_Default_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Make Envelope Documents Default View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Notification_Email_From_Address__c</fullName>
        <label>Notification Email From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Number_of_Requests_Per_Page__c</fullName>
        <defaultValue>25</defaultValue>
        <label>Number of Requests Per Page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSign__Open_Community_Sign_In_Person_In_New_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Open Community Sign In Person In New Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Reply_To_Email__c</fullName>
        <label>Reply To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SSign__Save_Confirmation_Emails_As_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save Confirmation Emails As Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Show_Audit_Trail_During_Signing_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Audit Trail During Signing Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Show_Timestamp_and_Signer_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Timestamp and Signer Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__SiteURL__c</fullName>
        <label>SiteURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Text_To_Signature_Font__c</fullName>
        <label>Text To Signature Font</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Use_Custom_Guest_Permission_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Custom S-Sign Guest Permission Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Use_Requester_Email_For_Reply_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Requester Email For Reply To</label>
        <type>Checkbox</type>
    </fields>
    <label>SSignSettings</label>
</CustomObject>